# wscad-agentic-ai

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
agents/: resolution_agent.yaml  triage_agent.yaml
knowledge_base/: Common_Errors.md  Installation_Requirements.md  Licensing_Offline_Activation.md
src/: api.py  config.py  llm_client.py  main.py
src/evaluation/: __init__.py  evaluator.py
src/executors/: __init__.py  clarification.py  intake.py  output.py  resolution.py  retrieval.py  rule_engine.py  triage.py
src/knowledge/: __init__.py  indexer.py  store.py
src/models/: __init__.py  output.py  resolution.py  retrieval.py  ticket.py  triage.py
src/rules/: __init__.py  known_patterns.py
src/security/: __init__.py  injection_detector.py  output_validator.py  sanitizer.py
src/tools/: __init__.py  kb_search.py
src/utils/: sitecustomize.py
src/workflow/: __init__.py  executors.py  graph.py
tests/: test_intake.py  test_rules.py  test_security.py  test_workflow.py
tickets/: Sample_Output.txt  expected_results.json  extra_tickets.json  tickets.json
